# find-evil

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  sitecustomize.py
docs/: architecture.md  competition.txt  roadmap.md
find_evil/: __init__.py  audit.py  graph.py  nodes.py  reasoning.py  state.py
src/find_evil/: adapters.py  app.py  audit.py  contracts.py  evidence.py  nodes.py  reasoning.py  reporting.py  state.py
tests/: test_graph.py
